<resources>
    <string name="app_name">GenuineTask</string>
    <string name="welcome_to">Welcome To</string>
    <string name="application">Application</string>
    <string name="image">image</string>
    <string name="get_first_delivery_service">Get\nFirst Delivery Service</string>
    <string name="best_quality_grocery_door_to_door">Best Quality\nGrocery Door to Door</string>
    <string name="skip">Skip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">Address</string>
    <string name="helpline">Helpline</string>
    <string name="logOut">Logout</string>
    <string name="favourite">Favourite</string>
    <string name="me">Me</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="all">All</string>
    <string name="fruits">Fruits</string>
    <string name="vegetables">Vegetables</string>
    <string name="fish">Fish</string>
    <string name="categoryDescription">Lorem ipsum diord sit amit,\nsjjrk aosjet constectia adiposimg sot</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="search">Search</string>
    <string name="book_price_tk">Tk.%.0f</string>
</resources>