<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/navAddress"
            android:icon="@drawable/ic_baseline_add_business_24"
            android:title="@string/address" />
        <item
            android:id="@+id/navHelpline"
            android:icon="@drawable/ic_baseline_phone_24"
            android:title="@string/helpline" />

    </group>


    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navLogout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/logOut" />
    </group>

</menu>